--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<html>
+<head>
+  <meta charset="utf-8" />
+</head>
+<body>
+<li><a href="./Algorytmy.html">Algorytmy</a></li>
+</body>
+</html>
