--- a/Algorytmy.html
+++ b/Algorytmy.html
@@ -3,6 +3,6 @@
   <meta charset="utf-8" />
 </head>
 <body>
-<li><a href="./Algorytmy/Z1A/SetSimple.java">Zestaw 1 A</a></li>
+<ul><li><a href="./Algorytmy/Z1A/SetSimple.java">Zestaw 1 A</a></li></ul>
 </body>
 </html>
