--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <meta charset="utf-8" />
 </head>
 <body>
-<li><a href="./Algorytmy.html">Algorytmy</a></li>
+<ul><li><a href="./Algorytmy.html">Algorytmy</a></li></ul>
 </body>
 </html>
